--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ReminderAssistant</string>
+    <string name="app_name">Reminder</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="calendar">Calendar</string>
     <string name="night_mode">Night Mode</string>
