--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ReminderAssistant</string>
+    <string name="app_name">Reminder</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="calendar">Calendar</string>
     <string name="night_mode">Night Mode</string>
@@ -23,4 +23,5 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="choose_theme_text">Choose Theme</string>
+    <string name="table">Table</string>
 </resources>
