--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Reminder</string>
     <string name="calendar">Calendar</string>
-    <string name="night_mode">Night Mode</string>
+    <string name="night_mode">Theme Select</string>
     <string name="notification">Notification</string>
     <string name="add_event">Add Event</string>
     <string name="_12_00">12:00</string>
@@ -13,8 +13,8 @@
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="time_button_default_text">00:00</string>
-    <string name="finish_time">Finish Time</string>
-    <string name="start_time">Start Time</string>
+    <string name="finish_time">Finish Time: </string>
+    <string name="start_time">Start Time: </string>
     <string name="class_name">Class Name</string>
     <string name="course_name">Course Name</string>
     <string name="enter_the_course_name">Enter the course name…</string>
@@ -52,4 +52,5 @@
     <string name="madeBy">Made by Hasan Deniz and Ali Türk</string>
     <string name="references">References:</string>
     <string name="contact">Contact Us: hasandeniz394@gmail.com </string>
+    <string name="delete_button">Delete Button</string>
 </resources>
