--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,10 @@
     <string name="references">References:</string>
     <string name="contact">Contact Us: hasandeniz394@gmail.com </string>
     <string name="delete_button">Delete Button</string>
+    <string name="showcase_add">This is add button\n\nYou can add your courses here! </string>
+    <string name="showcase_theme">This is change theme button\n\nYou can change your theme here! </string>
+    <string name="showcase_table">This is table view button\n\nYou can see your courses here! </string>
+    <string name="showcase_page">This is main page\n\nYou can see your daily courses here! </string>
+    <string name="got_it">GOT IT</string>
+
 </resources>
